[package]
name = "img-pipeline"
version = "0.1.0"
edition = "2021"
authors = ["anntnzrb <anntnzrb@proton.me>"]
description = "A simple image processing pipeline"
readme = "README.md"
homepage = "https://github.com/anntnzrb/img-pipeline"
repository = "https://github.com/anntnzrb/img-pipeline"
license-file = "COPYING"

[workspace]
members = [
    "blurrer",
    "edger",
    "publisher",
    "img_utils"
]

[dependencies]
color-eyre = { workspace = true }

[workspace.dependencies]
image = "0.25.2"
rayon = "1.7"
memmap2 = "0.9.4"
color-eyre = "0.6.2"
clap = { version = "4.4.18", features = ["derive"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
cargo = "deny"

enum_glob_use = "deny"
unwrap_used = "deny"

# eyre
[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'
panic = 'abort'
strip = 'symbols'
